--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header>
 
+<body class="work-sans-font">
+    <header class="bg-light">
+        <nav class="navbar banna display-flex">
+            <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
+            </ul>
+        </nav>
 
+        <div class="banner ">
+            <div class="banner-container">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-dis">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or random ised words which don't look even</p>
+                <button class="primery-btn">Explore More</button>
+            </div>
+            <img src="images/banner.png" class="banner-img" alt="">
+        </div>
 
 
 
@@ -24,4 +43,5 @@
 
     </footer>
 </body>
+
 </html>
