--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="work-sans-font">
     <header class="bg-light">
-        <nav class="navbar banna display-flex">
+        <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
             <ul class="nav-links display-flex">
                 <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
@@ -24,7 +24,8 @@
             <div class="banner-container">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
                 <p class="banner-dis">There are many variations of passages of Lorem Ipsum available, but the majority
-                    have suffered alteration in some form, by injected humour, or random ised words which don't look even</p>
+                    have suffered alteration in some form, by injected humour, or random ised words which don't look
+                    even</p>
                 <button class="primery-btn">Explore More</button>
             </div>
             <img src="images/banner.png" class="banner-img" alt="">
@@ -36,7 +37,25 @@
     </header>
 
     <main>
+        <section class="Teams display-flex">
 
+            <div class="team-img-cont">
+
+            <img src="images/team1.png" alt="">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
+
+            </div>
+
+            <div class="our-features">
+                <h3 class="feature-title"><span id="quick-list">Quick list</span> <span id="our">of Our</span> <span id="feau">Features</span></h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                    <button class="primery-btn">Explore More</button>
+            </div>
+        </section>
     </main>
 
     <footer>
